--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:name=".CabActivity"
             android:exported="false" />
         <activity
+            android:name=".RecipeMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".FridgeActivity"
             android:exported="false" />
         <activity
